--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-autosuggest": "^9.3.4",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
+    "react-dropdown": "^1.4.0",
+    "react-js-pagination": "^3.0.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2"
   }
